--- a/projects/JsonXhrRequest/css/styles.css
+++ b/projects/JsonXhrRequest/css/styles.css
@@ -151,14 +151,31 @@ ul, li {
 }
 
 .scrollTopBth {
-    padding: 10px 15px;
+    padding: 15px 20px;
     position: fixed;
     left: 20px;
     bottom: 20px;
     cursor: pointer;
+    border-radius: 50%;
     transition: .4s ease-in-out;
     opacity: 0;
     visibility: hidden;
+    border: none;
+    background-image: linear-gradient(to bottom, #62bee6, #269ed3);
+    color: #fff;
+    -webkit-box-shadow: 0px 9px 20px 0px rgba(204,204,204,1);
+    -moz-box-shadow: 0px 9px 20px 0px rgba(204,204,204,1);
+    box-shadow: 0px 9px 20px 0px rgba(204,204,204,1);
+    transition: .4s;
+}
+
+.scrollTopBth:hover {
+    background-image: linear-gradient(to top, #62bee6, #269ed3);
+}
+
+.scrollTopBth:disabled {
+    background-image: linear-gradient(to top, #62bee6, #269ed3);
+    cursor: default;
 }
 
 .scrollTopBth.showButton {
@@ -172,8 +189,68 @@ ul, li {
     margin: auto;
 }
 
+.notFound, .connectionProblems {
+    text-transform: uppercase;
+    color: #555;
+    text-align: center;
+    margin-top: 150px;
+}
+
+.connectionProblems {
+    transition: .4s;
+    color: #ff5810;
+    animation: errorAnim 2s infinite linear;
+}
+
+@keyframes errorAnim {
+    0%{
+        color: #ff5810;
+        animation-timing-function: ease-in-out;
+    }
+    50% {
+        color: #ee4902;
+        animation-timing-function: ease-in-out;
+    }
+    75% {
+        color: #a83402;
+        animation-timing-function: ease-in-out;
+    }
+    100%{
+        color: #ff5810;
+        animation-timing-function: ease-in-out;
+    }
+}
+
+-webkit-@keyframes errorAnim {
+    0%{
+        color: #ff5810;
+        animation-timing-function: ease-in-out;
+    }
+    50% {
+        color: #ee4902;
+        animation-timing-function: ease-in-out;
+    }
+    75% {
+        color: #a83402;
+        animation-timing-function: ease-in-out;
+    }
+    100%{
+        color: #ff5810;
+        animation-timing-function: ease-in-out;
+    }
+}
+
 
 @keyframes appAnim {
+    0%{
+        opacity: .3;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+-webkit-@keyframes appAnim {
     0%{
         opacity: .3;
     }
