--- a/projects/JsonXhrRequest/css/styles.css
+++ b/projects/JsonXhrRequest/css/styles.css
@@ -167,6 +167,7 @@ ul, li {
     -moz-box-shadow: 0px 9px 20px 0px rgba(204,204,204,1);
     box-shadow: 0px 9px 20px 0px rgba(204,204,204,1);
     transition: .4s;
+    outline: none;
 }
 
 .scrollTopBth:hover {
