--- a/projects/JsonXhrRequest/css/styles.css
+++ b/projects/JsonXhrRequest/css/styles.css
@@ -203,6 +203,22 @@ ul, li {
     animation: errorAnim 2s infinite linear;
 }
 
+
+.codeExample {
+    margin: 150px 0;
+    text-align: center;
+}
+
+.codeExample a{
+    display: inline-block;
+    font-size: 40px;
+    color: #555;
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    padding-top: 2px;
+    transition: .4s ease;
+}
+
 @keyframes errorAnim {
     0%{
         color: #ff5810;
@@ -266,6 +282,15 @@ ul, li {
     }
 }
 
+@media (min-width: 541px) {
+    .codeExample a:hover {
+        transition: .4s ease;
+        color: #6f6f6f;
+        border-bottom: 1px solid #6f6f6f;
+        padding-top: 2px;
+    }
+}
+
 @media (max-width: 540px) {
     #searcharea {
         width: 100%;
@@ -292,5 +317,11 @@ ul, li {
 
     #update ul li {
         padding: 10px;
+    }
+
+    .codeExample a {
+        font-size: 25px;
+        border-bottom: 1px solid #6f6f6f;
+        padding-top: 2px;
     }
 }
