--- a/projects/FetchRequest/css/styles.css
+++ b/projects/FetchRequest/css/styles.css
@@ -144,6 +144,7 @@ ul, li {
 }
 
 #update ul li {
+    display: block;
     margin-bottom: 30px;
     border: 1px solid #555555;
     border-left: none;
