--- a/projects/FetchRequest/css/styles.css
+++ b/projects/FetchRequest/css/styles.css
@@ -337,7 +337,7 @@ ul, li {
 }
 
 .blocksAnim {
-    visibility: hidden;
+    opacity: 0;
     transition: .4s ease-in-out;
 }
 
@@ -346,7 +346,7 @@ ul, li {
     -webkit-animation-name: blocksAnim;
     animation-duration: 1s;
     -webkit-animation-duration: 1s;
-    visibility: visible;
+    opacity: 1;
     transition: .4s ease-in-out;
 }
 
