--- a/projects/FetchRequest/css/styles.css
+++ b/projects/FetchRequest/css/styles.css
@@ -105,6 +105,7 @@ ul, li {
     transform: translateX(170px);
     flex-direction: column;
     align-items: stretch;
+    z-index: 100;
 }
 
 .navigation ul li {
