--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -14,8 +14,8 @@ body
   position: relative
   background-color: #373435
   //background: url('/images/background.png') no-repeat #373435
-  width: 100%
-  height: 100%
+  min-width: 100%
+  height: 100vh
   background-size: cover
   &.fixed
     overflow: hidden
@@ -528,7 +528,23 @@ main
           a
             padding-right: 0
 
+.ui-dialog
+  outline: none
+  z-index: 1000
+
+.t-dialogOverlay
+  z-index: 1000
+  position: fixed
+  left: 0
+  top: 0
+  bottom: 0
+  right: 0
+  background-color: rgba(0, 0, 0, .50)
+  width: 100%
+  height: 100vh
+
 .t-dialogCard
+  position: relative
   margin: 0 auto
   width: 640px
   background: #fff
@@ -558,3 +574,44 @@ main
     padding-bottom: 8px
     margin-bottom: 16px
     color: #1A1A1A
+
+
+.t-closeBtn
+  position: absolute
+  right: 32px
+  top: 32px
+  width: 32px
+  height: 32px
+  background-color: #26BFD1
+  border-radius: 3px
+  cursor: pointer
+  &:before, &:after
+    content: ''
+    position: absolute
+    width: 16px
+    height: 3px
+    border-radius: 1px
+    background-color: #fff
+    display: block
+    margin: auto
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+  &:before
+    transform: rotate(45deg)
+  &:after
+    transform: rotate(-45deg)
+
+
+.star-selected
+  svg
+    fill: #26bfd1
+
+.t-starHolder .t-star svg:hover,
+.t-starHolder .t-star svg:hover ~ .t-star svg
+  fill: #26bfd1
+
+::-webkit-input-placeholder
+  font-size: 14px
+  color: #E0E0E0
