--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -106,9 +106,11 @@ main
   flex: 1 1 auto
   margin: 0 auto
   min-height: calc(100vh - 462px)
+  margin-top: 184px
 
 .t-mainPage
   width: 980px
+  margin-top: 184px
 
 .headingTitle
   font-size: 46px
