--- a/projects/fantatic/frontend/templates/goodsOrder2.jade
+++ b/projects/fantatic/frontend/templates/goodsOrder2.jade
@@ -16,11 +16,11 @@ block content
                 div.t-aboutGoodsImgContainer
                     a(href="" data-lightbox="image-1")
                         div.t-insideImg
-                            img(src="/images/goodImage.png").t-goodsImgMain
+                            img(src="https://sergiosvision.github.io/img/Person.png").t-goodsImgMain
                 div.t-aboutGoodsInfoMain
                     div.t-aboutGoodsInfoMainHeader
-                        h1.t-titleOfGoods.t-goodsNameMain Neca Prometheus Series 1 Deluxe Pressure Suit Engineer
-                        span.t-codeOfGoods Код A94857339
+                        h1.t-titleOfGoods.t-goodsNameMain Nigga from SergiosVision
+                        span.t-codeOfGoods Код N55599999
                         div.t-ratingOfGoods
                             ul.t-starHolder
                                 li
@@ -37,19 +37,19 @@ block content
                                             path(id="path0_fill" d="M 8.58255 0.630602C 8.89985 -0.210201 10.1001 -0.210201 10.4175 0.630603L 12.1746 5.28684C 12.3123 5.65161 12.6567 5.89952 13.0493 5.91652L 18.0617 6.13353C 18.9668 6.17272 19.3377 7.3038 18.6287 7.86264L 14.7024 10.9574C 14.3948 11.1998 14.2632 11.6009 14.3683 11.9762L 15.7089 16.7666C 15.9509 17.6316 14.9799 18.3306 14.2244 17.8352L 10.0406 15.0916C 9.71284 14.8767 9.28716 14.8767 8.95941 15.0916L 4.77562 17.8352C 4.02013 18.3306 3.04907 17.6316 3.29114 16.7666L 4.63174 11.9762C 4.73676 11.6009 4.60522 11.1998 4.29763 10.9574L 0.371313 7.86263C -0.337684 7.3038 0.0332285 6.17272 0.938332 6.13353L 5.95066 5.91652C 6.34332 5.89952 6.6877 5.65161 6.82535 5.28684L 8.58255 0.630602Z")
                                 li
                                     span.t-star
-                                        svg(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
+                                        svg.active(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
                                             path(id="path0_fill" d="M 8.58255 0.630602C 8.89985 -0.210201 10.1001 -0.210201 10.4175 0.630603L 12.1746 5.28684C 12.3123 5.65161 12.6567 5.89952 13.0493 5.91652L 18.0617 6.13353C 18.9668 6.17272 19.3377 7.3038 18.6287 7.86264L 14.7024 10.9574C 14.3948 11.1998 14.2632 11.6009 14.3683 11.9762L 15.7089 16.7666C 15.9509 17.6316 14.9799 18.3306 14.2244 17.8352L 10.0406 15.0916C 9.71284 14.8767 9.28716 14.8767 8.95941 15.0916L 4.77562 17.8352C 4.02013 18.3306 3.04907 17.6316 3.29114 16.7666L 4.63174 11.9762C 4.73676 11.6009 4.60522 11.1998 4.29763 10.9574L 0.371313 7.86263C -0.337684 7.3038 0.0332285 6.17272 0.938332 6.13353L 5.95066 5.91652C 6.34332 5.89952 6.6877 5.65161 6.82535 5.28684L 8.58255 0.630602Z")
                                 li
                                     span.t-star
-                                        svg(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
+                                        svg.active(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
                                             path(id="path0_fill" d="M 8.58255 0.630602C 8.89985 -0.210201 10.1001 -0.210201 10.4175 0.630603L 12.1746 5.28684C 12.3123 5.65161 12.6567 5.89952 13.0493 5.91652L 18.0617 6.13353C 18.9668 6.17272 19.3377 7.3038 18.6287 7.86264L 14.7024 10.9574C 14.3948 11.1998 14.2632 11.6009 14.3683 11.9762L 15.7089 16.7666C 15.9509 17.6316 14.9799 18.3306 14.2244 17.8352L 10.0406 15.0916C 9.71284 14.8767 9.28716 14.8767 8.95941 15.0916L 4.77562 17.8352C 4.02013 18.3306 3.04907 17.6316 3.29114 16.7666L 4.63174 11.9762C 4.73676 11.6009 4.60522 11.1998 4.29763 10.9574L 0.371313 7.86263C -0.337684 7.3038 0.0332285 6.17272 0.938332 6.13353L 5.95066 5.91652C 6.34332 5.89952 6.6877 5.65161 6.82535 5.28684L 8.58255 0.630602Z")
 
-                            span.t-reviews - 20 Отзывов
+                            span.t-reviews - 1000 Отзывов
 
                     div.t-aboutGoodsInfoMainBody
                         div.t-priceWrapperOfGoods
-                            span.t-priceOfGoods.t-goodsPriceMain 32 500 ₽
-                            span.t-oldPriceOfGoods 39 000 ₽
+                            span.t-priceOfGoods.t-goodsPriceMain 45 500 ₽
+                            span.t-oldPriceOfGoods 70 000 ₽
                         div.t-inStockGoodsWrapper
                             span.t-inStockGoods В наличии
                         div.t-addToCartAndSocial
@@ -75,9 +75,9 @@ block content
                             div.t-featuresOfGoodsInfo
                                 |Датчики — гироскоп, акселерометр, датчик освещенности, сердечного ритма
                                 br
-                                |Время автономной работы — 18 часов
+                                |Время автономной работы — 3600 часов
                                 br
-                                |Диагональ дисплея — 1.5 дюйма
+                                |Диагональ — 5.5 дюйма
                             div.t-featuresOfGoodsMore
                                 span.t-moreDots
                                 span.t-moreButtonSmall подробнее
@@ -85,7 +85,7 @@ block content
                      div.t-aboutGoodsInfoMainFooter
                          ul.t-allFromThisBrandAndCategory
                              li
-                                 a(href="#").t-allFromTheThisBrand Вся продукция Boho Dress
+                                 a(href="#").t-allFromTheThisBrand Вся продукция SergiosVision
                              li
                                  a(href="#").t-allFromTheThisCategory Все подарки с юмором
 
@@ -133,17 +133,17 @@ block content
                                                 path(id="path0_fill" d="M 8.58255 0.630602C 8.89985 -0.210201 10.1001 -0.210201 10.4175 0.630603L 12.1746 5.28684C 12.3123 5.65161 12.6567 5.89952 13.0493 5.91652L 18.0617 6.13353C 18.9668 6.17272 19.3377 7.3038 18.6287 7.86264L 14.7024 10.9574C 14.3948 11.1998 14.2632 11.6009 14.3683 11.9762L 15.7089 16.7666C 15.9509 17.6316 14.9799 18.3306 14.2244 17.8352L 10.0406 15.0916C 9.71284 14.8767 9.28716 14.8767 8.95941 15.0916L 4.77562 17.8352C 4.02013 18.3306 3.04907 17.6316 3.29114 16.7666L 4.63174 11.9762C 4.73676 11.6009 4.60522 11.1998 4.29763 10.9574L 0.371313 7.86263C -0.337684 7.3038 0.0332285 6.17272 0.938332 6.13353L 5.95066 5.91652C 6.34332 5.89952 6.6877 5.65161 6.82535 5.28684L 8.58255 0.630602Z")
                                     li
                                         span.t-star
-                                            svg(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
+                                            svg.active(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
                                                 path(id="path0_fill" d="M 8.58255 0.630602C 8.89985 -0.210201 10.1001 -0.210201 10.4175 0.630603L 12.1746 5.28684C 12.3123 5.65161 12.6567 5.89952 13.0493 5.91652L 18.0617 6.13353C 18.9668 6.17272 19.3377 7.3038 18.6287 7.86264L 14.7024 10.9574C 14.3948 11.1998 14.2632 11.6009 14.3683 11.9762L 15.7089 16.7666C 15.9509 17.6316 14.9799 18.3306 14.2244 17.8352L 10.0406 15.0916C 9.71284 14.8767 9.28716 14.8767 8.95941 15.0916L 4.77562 17.8352C 4.02013 18.3306 3.04907 17.6316 3.29114 16.7666L 4.63174 11.9762C 4.73676 11.6009 4.60522 11.1998 4.29763 10.9574L 0.371313 7.86263C -0.337684 7.3038 0.0332285 6.17272 0.938332 6.13353L 5.95066 5.91652C 6.34332 5.89952 6.6877 5.65161 6.82535 5.28684L 8.58255 0.630602Z")
                                     li
                                         span.t-star
-                                            svg(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
+                                            svg.active(width="19" height="18" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg")
                                                 path(id="path0_fill" d="M 8.58255 0.630602C 8.89985 -0.210201 10.1001 -0.210201 10.4175 0.630603L 12.1746 5.28684C 12.3123 5.65161 12.6567 5.89952 13.0493 5.91652L 18.0617 6.13353C 18.9668 6.17272 19.3377 7.3038 18.6287 7.86264L 14.7024 10.9574C 14.3948 11.1998 14.2632 11.6009 14.3683 11.9762L 15.7089 16.7666C 15.9509 17.6316 14.9799 18.3306 14.2244 17.8352L 10.0406 15.0916C 9.71284 14.8767 9.28716 14.8767 8.95941 15.0916L 4.77562 17.8352C 4.02013 18.3306 3.04907 17.6316 3.29114 16.7666L 4.63174 11.9762C 4.73676 11.6009 4.60522 11.1998 4.29763 10.9574L 0.371313 7.86263C -0.337684 7.3038 0.0332285 6.17272 0.938332 6.13353L 5.95066 5.91652C 6.34332 5.89952 6.6877 5.65161 6.82535 5.28684L 8.58255 0.630602Z")
 
                                 div.t-reviewNameWrapper
-                                    span.t-reviewName Константин
+                                    span.t-reviewName Игнат
                                 div.t-reviewDateWrapper
-                                    span.t-reviewDate Сегодня, 15:42
+                                    span.t-reviewDate Завтра, 17:42
                                 div.t-reviewTextWrapper
                                     p Все очень нравится. После 6s плюс размер удобнее и практичнее в использовании. К отсутствию кнопки "Домой" привык в первый же день. Телефон узнает меня моментально. Приятная фишка: взглянул на экран, громкость звонка входящего вызова сразу снижается до еле слышного уровня..
                                       |Пока не могу привыкнуть к тому, что блокировка и кнопка громкости на против - это скриншот. Так вот, часто, вместо выключения телефона, делаю непроизвольно фото экрана, прижимая кнопку напротив громкости.))) В общем телефон прекрасен!!! Только цена высоковата...
