--- a/projects/fantatic/frontend/templates/index.jade
+++ b/projects/fantatic/frontend/templates/index.jade
@@ -97,7 +97,7 @@ block content
         section.t-discounts
             h2.t-sectionTitle Скидки
             div.t-cardsHolder
-                + tCards()
+                + tCards2()
 
 
         section.t-bottomInfo
