--- a/projects/fantatic/frontend/sass/header.sass
+++ b/projects/fantatic/frontend/sass/header.sass
@@ -1,5 +1,6 @@
 header
-  position: relative
+  z-index: 1000
+  position: absolute
   width: 100%
   height: 184px
   padding: 40px 40px 0 40px
@@ -9,15 +10,35 @@ header
   transition: 1s cubic-bezier(.35,0,.33,1)
   animation: showHeader 2s cubic-bezier(.35,0,.33,1)
   animation-delay: 4s
+  transition: .4s ease
+  &.t-stickyHeader
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    transition: .4s ease
+    height: 56px
+    padding-top: 0
+    background-color: rgba(0, 0, 0, .40)
+    align-items: center
+    .t-catalogWrap
+      top: 16px!important
+    .t-menuWrapper
+      top: -20px!important
+    .t-smallCart, .t-searchBar
+      top: -12px!important
+    .t-openSerachBar
+      top: 10px!important
   &.hideHeader
     opacity: 0
+    pointer-events: none
   .t-catalog
     position: relative
     &.activeMenu
       .t-catalogWrap
-        position: fixed
-        left: 46px
-        top: 40px
+        position: absolute
+        left: 0
+        top: 0
         .t-burger
           z-index: 1200
           .line
@@ -56,6 +77,14 @@ header
     position: absolute
     transform: translateX(-50%)
     left: 50%
+    transition: .4s ease
+    .t-secondLogo
+      display: none
+    &.t-activeLogos
+      .t-firstLogo
+        display: none
+      .t-secondLogo
+        display: block
   .t-navigation
     position: relative
     ul
@@ -73,7 +102,6 @@ header
       position: relative
       &.active
         fill: #E0E0E0
-        z-index: 1
         cursor: default
       &.t-fillBlack
           fill: #4F4F4F!important
@@ -90,39 +118,140 @@ header
       opacity: 0
       pointer-events: none
       transition: .4s ease
+      .t-searchBarBtn
+        position: absolute
+        top: 33px
+        right: 20px
       .t-input
-        width: 100%
+        width: 96%
         border-color: #E0E0E0
         margin-bottom: 24px
         color: #4F4F4F
       &.activeSearch
         opacity: 1
         pointer-events: all
+    .t-smallCartOpen
+      &.t-hasGoodsInCart
+        &:before
+          content: ''
+          display: block
+          position: absolute
+          right: -6px
+          top: -8px
+          width: 6px
+          height: 6px
+          background-color: #ed3237
+          border-radius: 50%
     .t-smallCart
-      position: fixed
-      top: 8px
-      right: 8px
+      position: absolute
+      top: -32px
+      right: -32px
       background-color: #fff
       border-radius: 24px
       padding: 32px
       width: 336px
+      z-index: 1000
+      opacity: 0
+      pointer-events: none
+      transition: .4s ease
+      &.activeCart
+        pointer-events: all
+        opacity: 1
+        cursor: default
+      .t-smallCartTitleWrapper
+        display: flex
+        justify-content: space-between
+        align-items: center
+        .t-smallCartitle
+          font-weight: bold
+          font-size: 16px
+          color: #4F4F4F
+        .t-closeBtnSmallCart
+          width: 12px
+          height: 12px
+          position: relative
+          left: auto
+          right: auto
+          top: auto
+          bottom: auto
+          background-color: transparent
+          &:before, &:after
+            border-radius: 10px
+            background-color: #E0E0E0
+            width: 12px
+      .t-smallCartInfo
+        display: flex
+        flex-direction: column
+        margin-top: 16px
+        .t-smallCartTitleInfo
+          color: #4F4F4F
+          font-size: 16px
+          margin-bottom: 16px
+        .t-smallCartTotalPrice
+          font-size: 25px
+          color: #4f4f4f
+          font-weight: bold
+          margin-bottom: 8px
+          display: none
+          &.activeTotal
+            display: block
+
+    .t-smallCartBody
+      display: flex
+      flex-direction: column
+      list-style: none
+      margin: 0
+      padding: 0
+      max-height: 280px
+      overflow: auto
+      display: block
+      &.t-smallCartBodyActive
+        margin-top: 32px
+    .t-smallCartItem
+      display: flex
+      margin-bottom: 24px
+      &:last-child
+        margin-bottom: 0
+      .t-smallCartItemImg
+        width: 32px
+        height: 32px
+        margin-right: 8px
+        img
+          width: 100%
+          height: auto
+      .t-smallCartItemPriceAndName
+        color: #4F4F4F
+        .t-smallCartItemName
+          font-size: 16px
+          font-weight: normal
+        .t-smallCartPrice
+          font-weight: bold
+          font-size: 16px
+          margin-top: 8px
+          display: inline-block
 
   .t-menuWrapper
-    position: fixed
-    left: 8px
-    top: 8px
+    position: absolute
+    left: -32px
+    top: -32px
     z-index: 999
     opacity: 0
     pointer-events: none
     transition: .4s ease
     .t-menuList
+      position: relative
       width: 336px
+      min-height: 476px
       list-style: none
       background-color: #fff
       border-radius: 24px
-      padding: 83px 38px 38px 38px
+      display: inline-block
+      //padding: 83px 38px 38px 38px
       li
-        margin-bottom: 16px
+        display: block
+        margin: 0 0 16px 38px
+        &:first-child
+          margin-top: 83px
         &:last-child
           margin-bottom: 0
         .t-menuListLink
@@ -133,13 +262,58 @@ header
           transition: .4s ease
           text-decoration: none
           &:hover
-            color: #ED3237
+            color: #26BFD1
           &:before
             content: url('/images/icons/ultraSmallCase.svg')
             width: 16px
             height: 16px
             background-size: contain
             margin-right: 10px
+        &.hover
+          .t-menuListSecondLevel
+            opacity: 1
+            pointer-events: all
+          .t-menuListLink
+            color: #26BFD1
+        .t-menuListSecondLevel
+          opacity: 0
+          pointer-events: none
+          position: absolute
+          right: -295px
+          top: 0
+          transition: .3s ease
+          border-left: 1px solid #F5F5F5
+          border-radius: 0 24px 24px 0
+          z-index: 1000
+          overflow: hidden
+          li
+            margin-bottom: 8px
+            .t-catImages
+              position: absolute
+              right: 0
+              top: 50%
+              transform: translateY(-50%)
+              max-width: 168px
+              max-height: 320px
+              opacity: 0
+              transition: .3s ease
+            img
+              width: 100%
+              height: auto
+            &:hover
+              .t-catImages
+                opacity: 1
+          .t-menuListLinkSecond
+            display: inline-block
+            color: #4F4F4F
+            font-weight: bold
+            font-size: 16px
+            transition: .4s ease
+            text-decoration: none
+            &:hover
+              color: #26BFD1
+
+
 
 
 .t-catalogWrap:hover > .t-menuWrapper
