--- a/projects/fantatic/frontend/templates/_layout.jade
+++ b/projects/fantatic/frontend/templates/_layout.jade
@@ -1,16 +1,16 @@
 mixin tCards ()
     - for(var i = 0; i < 3; i++)
-            div.t-goodsCard
+            div.t-goodsCard.t-GoodsCardMain
                 a(href="/goodsOrder.html").t-goodsLink
                     div.t-goodsCardImage
-                        img(src="/images/goodImage.png")
+                        img(src="/images/goodImage.png").t-goodsCardImg.t-goodsImgMain
                         div.t-imgOverlay
                             img(src="/images/icons/plus.svg")
                     div.t-goodsCardInfo
                         span.t-goodsCardCategory Подарки с юмором
                         //a(href="/goodsOrder.html")
-                        h3.t-goodsCardDescription Neca Prometheus Series 1 Deluxe Pressure Suit Engineer
-                        span.t-goodsCardPrice 32 500 ₽
+                        h3.t-goodsCardDescription.t-goodsNameMain Neca Prometheus Series 1 Deluxe Pressure Suit Engineer
+                        span.t-goodsCardPrice.t-goodsPriceMain 32 500 ₽
                         ul.t-starHolder
                             li
                                 span.t-star
@@ -33,6 +33,42 @@ mixin tCards ()
                                     svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink")
                                         path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
                 button(type="button").t-btn.t-addToCart.t-addToCartCard Добавить в корзину
+
+mixin tCards2 ()
+    - for(var k = 0; k < 3; k++)
+        div.t-goodsCard.t-GoodsCardMain
+            a(href="/goodsOrder2.html").t-goodsLink
+                div.t-goodsCardImage
+                    img(src="https://sergiosvision.github.io/img/Person.png").t-goodsCardImg.t-goodsImgMain
+                    div.t-imgOverlay
+                        img(src="/images/icons/plus.svg")
+                div.t-goodsCardInfo
+                    span.t-goodsCardCategory Подарки с юмором
+                    //a(href="/goodsOrder.html")
+                    h3.t-goodsCardDescription.t-goodsNameMain Nigga from SergiosVision
+                    span.t-goodsCardPrice.t-goodsPriceMain 45 500 ₽
+                    ul.t-starHolder
+                        li
+                            span.t-star
+                                svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink").active
+                                    path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
+                        li
+                            span.t-star
+                                svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink").active
+                                    path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
+                        li
+                            span.t-star
+                                svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink").active
+                                    path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
+                        li
+                            span.t-star
+                                svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink").active
+                                    path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
+                        li
+                            span.t-star
+                                svg(width="10" height="9" viewBox="0 0 10 9" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink").active
+                                    path(id="path0_fill" d="M 4.51713 0.315301C 4.68413 -0.105101 5.31587 -0.1051 5.48287 0.315301L 6.40771 2.64342C 6.48016 2.8258 6.66141 2.94976 6.86808 2.95826L 9.50614 3.06677C 9.98251 3.08636 10.1777 3.6519 9.80457 3.93132L 7.73809 5.47868C 7.5762 5.5999 7.50697 5.80046 7.56224 5.9881L 8.26782 8.38328C 8.39523 8.81579 7.88414 9.16531 7.48652 8.9176L 5.28452 7.5458C 5.11202 7.43834 4.88798 7.43834 4.71548 7.5458L 2.51348 8.9176C 2.11586 9.16532 1.60477 8.81579 1.73218 8.38328L 2.43776 5.9881C 2.49303 5.80046 2.4238 5.5999 2.26191 5.47868L 0.195428 3.93132C -0.177728 3.6519 0.0174887 3.08636 0.493859 3.06677L 3.13193 2.95826C 3.33859 2.94976 3.51984 2.8258 3.59229 2.64342L 4.51713 0.315301Z")
+            button(type="button").t-btn.t-addToCart.t-addToCartCard Добавить в корзину
 
 mixin tBottomCardHolder ()
     div.t-bottomInfoCardsHolder
