--- a/projects/fantatic/frontend/sass/header.sass
+++ b/projects/fantatic/frontend/sass/header.sass
@@ -297,6 +297,7 @@ header
               max-height: 320px
               opacity: 0
               transition: .3s ease
+              pointer-events: none
             img
               width: 100%
               height: auto
